style: Add light mode style for Articles page

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -166,9 +166,11 @@ video {
 
 /* ============== LIGHT MODE ==================== */
 :is(html[data-color-scheme="light"]) {
+  --clr-neutral-border: 223 9% 85%;
+
   --clr-body-bg: hsl(0, 0%, 100%);
   --clr-icon: hsl(215 14% 34%);
   --clr-border: rgb(214, 216, 221);
   --clr-white: hsl(225 10% 8%);
-  --clr-subtitle: rgb(55 65 81);
+  --clr-subtitle: hsl(var(--clr-neutral-border));
 }
