--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -27,36 +27,38 @@
   --fw-700: 700;
 
   /* COLORS */
-  --clr-primary-100: hsl(32, 19%, 88%);
-  --clr-primary-200: hsl(32, 98%, 83%);
-  --clr-primary-300: hsl(27, 96%, 61%);
-  --clr-primary-400: hsl(27, 77%, 56%);
-  --clr-primary-500: hsl(26, 90%, 40%);
-  --clr-primary-600: hsl(13, 81%, 15%);
-
+  --clr-neutral-primary-100: 32 19% 88%;
   --clr-neutral-primary-200: 32 98% 83%;
   --clr-neutral-primary-300: 27 96% 61%;
   --clr-neutral-primary-400: 27 77% 56%;
   --clr-neutral-primary-500: 26 90% 40%;
   --clr-neutral-primary-600: 13 81% 15%;
 
-  --clr-white: hsl(0 0% 100%);
-  --clr-off-white: hsl(0 0% 95%);
-  --clr-light-gray-400: hsl(216 12% 84% / 0.9);
-  --clr-light-gray: hsl(218 11% 65%);
-  --clr-border: hsla(0 0% 100% / 0.1);
-  --clr-card-bg: hsla(240, 12%, 5%, 0.8);
-  --clr-body-bg: hsl(225 10% 8%);
-  --clr-icon: hsl(216 12% 84%);
-  --clr-subtitle: rgba(209, 213, 219, 0.9);
-
   --clr-neutral-body-bg: 225 10% 8%;
   --clr-neutral-border: 0 0% 100%;
   --clr-neutral-off-white: 0 0% 95%;
   --clr-neutral-light-gray: 218 11% 65%;
 
-  --clr-danger: hsl(0 77% 53%);
   --clr-neutral-danger: 0 77% 53%;
+
+  --clr-primary-100: hsl(var(--clr-neutral-primary-100));
+  --clr-primary-200: hsl(var(--clr-neutral-primary-200));
+  --clr-primary-300: hsl(var(--clr-neutral-primary-300));
+  --clr-primary-400: hsl(var(--clr-neutral-primary-400));
+  --clr-primary-500: hsl(var(--clr-neutral-primary-500));
+  --clr-primary-600: hsl(var(--clr-neutral-primary-600));
+
+  --clr-white: hsl(0 0% 100%);
+  --clr-off-white: hsl(var(--clr-neutral-off-white));
+  --clr-light-gray-400: hsl(216 12% 84% / 0.9);
+  --clr-light-gray: hsl(var(--clr-neutral-light-gray));
+  --clr-border: hsla(var(--clr-neutral-border) / 0.1);
+  --clr-card-bg: hsla(240, 12%, 5%, 0.8);
+  --clr-body-bg: hsl(var(--clr-neutral-body-bg));
+  --clr-icon: hsl(216 12% 84%);
+  --clr-subtitle: rgba(209, 213, 219, 0.9);
+
+  --clr-danger: hsl(var(--clr-neutral-danger));
 
   /* ANIMATION */
   --transition: all 0.15s cubic-bezier(0.4, 0, 0.2, 1);
