--- a/client/src/styles/pages/dashboard/table/EnhanceTableRow.module.css
+++ b/client/src/styles/pages/dashboard/table/EnhanceTableRow.module.css
@@ -25,7 +25,7 @@
   font-size: 0.875rem;
   padding: 6px;
   margin: 12px 1rem;
-  min-width: 150px;
+  min-width: 130px;
   border-radius: 12px;
   overflow: auto;
   outline: 0px;
@@ -38,6 +38,9 @@
 
 .edit-button,
 .delete-button {
+  display: flex;
+  gap: 8px;
+  align-items: center;
   list-style: none;
   padding: 8px;
   border-radius: 8px;
