--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -26,8 +26,6 @@
   --fw-600: 600;
   --fw-700: 700;
 
-  color: #fb923c;
-
   /* COLORS */
   --clr-neutral-primary-100: 32 19% 88%;
   --clr-neutral-primary-200: 32 98% 83%;
@@ -40,6 +38,7 @@
   --clr-neutral-border: 0 0% 100%;
   --clr-neutral-off-white: 0 0% 95%;
   --clr-neutral-light-gray: 218 11% 65%;
+  --clr-neutral-white: 0 0% 100%;
 
   --clr-neutral-danger: 0 77% 53%;
 
@@ -50,7 +49,7 @@
   --clr-primary-500: hsl(var(--clr-neutral-primary-500));
   --clr-primary-600: hsl(var(--clr-neutral-primary-600));
 
-  --clr-white: hsl(0 0% 100%);
+  --clr-white: hsl(var(--clr-neutral-white));
   --clr-off-white: hsl(var(--clr-neutral-off-white));
   --clr-light-gray-400: hsl(216 12% 84% / 0.9);
   --clr-light-gray: hsl(var(--clr-neutral-light-gray));
@@ -121,7 +120,6 @@ a {
 [type="submit"],
 button {
   -webkit-appearance: button;
-  background-color: transparent;
   background-image: none;
   cursor: pointer;
   border: none;
