feat: Implement Error boundary when something went wrong

--- a/client/src/styles/pages/sign/PersistLogin.module.css
+++ b/client/src/styles/pages/sign/PersistLogin.module.css
@@ -1,3 +1,7 @@
+html {
+  scrollbar-gutter: auto;
+}
+
 .unauthorized-wrapper {
   --bg-color: hsl(var(--clr-neutral-off-white) / 0.1);
   --border-color: var(--clr-border);
