--- a/client/src/styles/pages/PageNotFound.module.css
+++ b/client/src/styles/pages/PageNotFound.module.css
@@ -1,5 +1,9 @@
+html {
+  scrollbar-gutter: auto;
+}
+
 .not-found-wrapper {
-  --header-height: 57px;
+  --header-height: 65px;
   --footer-height: 105px;
 
   display: flex;
