--- a/client/src/styles/pages/articles/ArticleCard.module.css
+++ b/client/src/styles/pages/articles/ArticleCard.module.css
@@ -1,3 +1,12 @@
+.card-wrapper {
+  --bg-color: rgba(11, 11, 14, 0.8);
+  --border-color: rgba(75, 85, 99, 0.2);
+
+  transition: var(--transition);
+  padding: 1.5rem;
+  margin: 0 -1.5rem;
+}
+
 .title {
   color: var(--clr-white);
   margin-bottom: 0.25rem;
@@ -25,10 +34,22 @@
   margin-top: 6px;
 }
 
+@media (min-width: 640px) {
+  .card-wrapper:hover {
+    background: var(--bg-color);
+    box-shadow: 0 0 0 1px var(--border-color) inset;
+    border-radius: 8px;
+  }
+}
+
 /* ============== LIGHT MODE ==================== */
 html[data-color-scheme="light"] .date {
   color: #6b7280;
 }
 html[data-color-scheme="light"] .summary {
   color: #374151;
+}
+html[data-color-scheme="light"] .card-wrapper:hover {
+  --bg-color: hsl(210, 20%, 98%);
+  --border-color: hsl(220, 13%, 91%);
 }
